--- a/app/src/main/res/drawable/background_button_update.xml
+++ b/app/src/main/res/drawable/background_button_update.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
 
     <corners android:radius="15dp" />
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/colorGreen" />
 </shape>
