--- a/app/src/main/res/layout/adapter_entrega.xml
+++ b/app/src/main/res/layout/adapter_entrega.xml
@@ -73,7 +73,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="@string/status"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@android:color/holo_red_light"
         android:textSize="16sp"
         android:textStyle="bold" />
 </LinearLayout>
