--- a/app/src/main/res/layout/dialog_coleta.xml
+++ b/app/src/main/res/layout/dialog_coleta.xml
@@ -4,11 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="16dp"
-    android:paddingTop="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="8dp">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
