--- a/app/src/main/res/layout/dialog_funcionario.xml
+++ b/app/src/main/res/layout/dialog_funcionario.xml
@@ -140,7 +140,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:layout_gravity="fill_horizontal"
-                        android:inputType="textPersonName" />
+                        android:inputType="textCapWords|textCapSentences" />
 
                     <TextView
                         android:id="@+id/emailTextView"
@@ -243,25 +243,17 @@
                     android:visibility="gone">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
+                        android:gravity="center"
                         android:text="@string/cnh"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
 
-                    <EditText
-                        android:id="@+id/cnhEditText"
-                        style="@style/EditTextTheme"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:ems="10"
-                        android:inputType="numberSigned" />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="24dp"
                         android:text="@string/categoria"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
@@ -271,38 +263,22 @@
                         style="@style/EditTextTheme"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
+                        android:layout_marginTop="5dp"
                         android:ems="10"
                         android:inputType="textCapCharacters" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="@string/veiculo"
+                        android:layout_marginTop="24dp"
+                        android:text="@string/n_registro"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/veiculoEditText"
+                        android:id="@+id/nRegistroEditText"
                         style="@style/EditTextTheme"
                         android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:layout_marginTop="5dp"
-                        android:ems="10"
-                        android:inputType="textPersonName" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="@string/ano"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
-
-                    <EditText
-                        android:id="@+id/anoEditText"
-                        style="@style/EditTextTheme"
-                        android:layout_width="100dp"
                         android:layout_height="35dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
@@ -311,18 +287,70 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="@string/placa"
+                        android:layout_marginTop="24dp"
+                        android:text="@string/validade"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
 
                     <EditText
-                        android:id="@+id/placaEditText"
+                        android:id="@+id/validadeEditText"
                         style="@style/EditTextTheme"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="35dp"
+                        android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:inputType="textCapCharacters" />
+                        android:inputType="date" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:text="1° Habilitação"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/primeiraHabilitacaoEditText"
+                        style="@style/EditTextTheme"
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="5dp"
+                        android:ems="10"
+                        android:inputType="date" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:text="@string/local"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/localEditText"
+                        style="@style/EditTextTheme"
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="5dp"
+                        android:ems="10"
+                        android:inputType="textCapWords|textCapSentences" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:text="@string/data_de_emissao"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/dataEmissaoEdiText"
+                        style="@style/EditTextTheme"
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="5dp"
+                        android:ems="10"
+                        android:inputType="date" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -370,7 +398,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:background="@android:color/holo_red_light"
+            android:background="@drawable/background_button_delete"
             android:padding="8dp"
             app:srcCompat="@drawable/ic_delete_white_24dp" />
 
@@ -380,7 +408,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:background="@color/colorGreen"
+            android:background="@drawable/background_button_update"
             android:padding="8dp"
             android:visibility="gone"
             app:srcCompat="@drawable/ic_done_white_24dp" />
@@ -391,7 +419,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:background="@drawable/background_button"
+            android:background="@drawable/selector_button"
             android:padding="8dp"
             app:srcCompat="@drawable/ic_mode_edit_white_24dp" />
 
@@ -399,7 +427,7 @@
             android:id="@+id/fecharButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_button"
+            android:background="@drawable/selector_button"
             android:padding="8dp"
             android:text="@string/fechar"
             android:textColor="@android:color/white"
