--- a/app/src/main/res/layout/dialog_nota.xml
+++ b/app/src/main/res/layout/dialog_nota.xml
@@ -366,7 +366,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:inputType="textCapCharacters"
                     android:text="@string/placa_do_veiculo"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
@@ -377,7 +376,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
-                    android:ems="10" />
+                    android:ems="10"
+                    android:inputType="textCapCharacters" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -513,7 +513,7 @@
             android:padding="8dp"
             android:text="@string/fechar"
             android:textColor="@android:color/white"
-            app:srcCompat="@drawable/ic_clear_white_24dp" />
+            app:srcCompat="@drawable/ic_close_24dp" />
     </LinearLayout>
 
 </LinearLayout>
