--- a/app/src/main/res/layout/fragment_roteirista_coletas_nova.xml
+++ b/app/src/main/res/layout/fragment_roteirista_coletas_nova.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -42,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="Número Coleta -c"
+                    android:text="Número Coleta - c"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
@@ -88,8 +87,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
-
-
                     android:ems="10"
                     android:inputType="date|time"
                     android:textSize="14sp" />
@@ -151,10 +148,10 @@
 
                 <EditText
                     android:id="@+id/referenciaRemetenteEditText"
+                    style="@style/EditTextTheme"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/background_edit_text"
                     android:ems="10"
                     android:inputType="textCapWords|textCapSentences"
                     android:textSize="14sp" />
@@ -282,7 +279,7 @@
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
                     android:ems="10"
-                    android:inputType="text"
+                    android:inputType="textCapCharacters"
                     android:textSize="14sp" />
 
                 <TextView
@@ -346,7 +343,7 @@
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="numberDecimal"
                     android:textSize="14sp" />
 
                 <TextView
@@ -382,7 +379,7 @@
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="numberSigned"
                     android:textSize="14sp" />
 
                 <TextView
@@ -483,7 +480,7 @@
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapCharacters"
                     android:textSize="14sp" />
 
                 <TextView
@@ -561,7 +558,7 @@
                     android:id="@+id/observacoesEditText"
                     style="@style/EditTextTheme"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="150dp"
                     android:layout_marginTop="5dp"
                     android:ems="10"
                     android:gravity="start"
@@ -580,7 +577,7 @@
                     android:id="@+id/instrucoesEditText"
                     style="@style/EditTextTheme"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="120dp"
                     android:layout_marginTop="5dp"
                     android:ems="10"
                     android:gravity="start"
@@ -641,7 +638,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
-            app:srcCompat="@drawable/recognizer_icon" />
+            app:srcCompat="@drawable/recognizer_icon_34" />
 
         <Button
             android:id="@+id/limparButton"
