--- a/app/src/main/res/layout/fragment_adm_funcionarios_lista.xml
+++ b/app/src/main/res/layout/fragment_adm_funcionarios_lista.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_search"
+        android:inputType="textCapWords|textCapSentences"
         android:queryHint="Digite o nome do funcionário" />
 
     <LinearLayout
