--- a/app/src/main/res/menu/activity_main_adm_drawer.xml
+++ b/app/src/main/res/menu/activity_main_adm_drawer.xml
@@ -21,7 +21,7 @@
 
         <item
             android:id="@+id/nav_veiculos"
-            android:icon="@drawable/ic_people_24dp"
+            android:icon="@drawable/ic_local_shipping_24dp"
             android:title="@string/veiculos" />
 
         <item
