--- a/app/src/main/res/menu/bottom_navigation_notas.xml
+++ b/app/src/main/res/menu/bottom_navigation_notas.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/action_cadastradas"
-        android:icon="@drawable/ic_mail_24dp"
+        android:icon="@drawable/ic_library_books_24dp"
         android:title="@string/todas"
         app:showAsAction="ifRoom" />
 </menu>
